# aspire

./: .gitignore
abuff/: Makefile  README_cn.md  abuff.c  abuff.h  examples.c  test.txt  testing.c  testing.h
abuffer/: Makefile  buffer.c  buffer.h  examples.c  testing.c  wrapper.sh
argv/: Makefile  README.md  README_cn.md  strargv.c  strargv.h  test.c  testing.c  testing.h  wrapper.sh
coverage/: CMakeLists.txt  load.c  load.h  main.c
coverage/contrib/cmake/: CodeCoverage.cmake
coverage/libs/libmock/: CMakeLists.txt  testing.c  testing.h
coverage/tests/: CMakeLists.txt  tload.c
exec/: main.c
fincore/: Makefile  fincore.c
histogram/: Makefile  histogram.c  histogram.h  test.c  testing.h
memory/: Makefile  README.md  main.c
ulimits/: Makefile  main.c
wrap/: Makefile  READMD.md  exec.c  main.c
